Villanova_Dev1/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Life_Time_Recognition__c</fullName>
        <description>Life Time Recognition from all types of gifts</description>
        <inlineHelpText>This value includes matching gifts, split gifts, direct contributions, etc.</inlineHelpText>
        <label>Life Time Recognition</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link_to_Spouse__c</fullName>
        <description>Look up into SalesForce People object for Spouse record</description>
        <inlineHelpText>This link will take you to the associated record of the spouse, if they are tracked.</inlineHelpText>
        <label>Link to Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <inlineHelpText>Enter the URL for the Contact&apos;s LinkedIn page.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Linked_In_Validation_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked In Validation (EMBA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_In__c</fullName>
        <label>LinkedIn Id</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lunch_Preference__c</fullName>
        <label>Lunch Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roast Beef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBA_Applicant__c</fullName>
        <label>MBA Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street2__c</fullName>
        <label>Home Street2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street3__c</fullName>
        <description>Mailing</description>
        <label>Home Street3</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street4__c</fullName>
        <label>Home Street4</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Concentration__c</fullName>
        <label>Major/Concentration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Stock_Shareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>Major Stock/Shareholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_Speakers_Bureau__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>Member of Speakers Bureau</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Gift__c</fullName>
        <description>Most Recent Gift Amount</description>
        <label>Most Recent Gift</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_Prefix__c</fullName>
        <label>Name Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoAttend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field for parity with Leads</description>
        <label>I am unable to attend:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field</description>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers_Requested__c</fullName>
        <label>Number of Volunteers Requested</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Book__c</fullName>
        <description>Reservation for One Book Program</description>
        <label>One Book</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Institution__c</fullName>
        <label>Organization/Institution</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Line2__c</fullName>
        <label>Business Street2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Line4__c</fullName>
        <label>Business Street4</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Event Registration field</description>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_address_Line3__c</fullName>
        <label>Business Street3</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Email_Distribution_List_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outlook Email Distribution List (EMBA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copy of passport has been received</description>
        <label>Passport Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Passport photo has been received.</description>
        <label>Passport Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonLastCURequestDate__c</fullName>
        <label>PersonLastCURequestDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonLastCUUpdateDate__c</fullName>
        <label>PersonLastCUUpdateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Photo_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo (EMBA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <label>Pool</label>
        <picklist>
            <picklistValues>
                <fullName>A &amp; S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Post_Grad_Degree__c</fullName>
        <label>Post Grad Degree</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Grad_University__c</fullName>
        <label>Post Grad University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Grad_Year__c</fullName>
        <label>Post Grad Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Class__c</fullName>
        <label>Preferred Class</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>The Contact&apos;s Preferred Name.</description>
        <inlineHelpText>The Contact&apos;s Preferred Name. This field can also be used for phonetic pronunciations of names.</inlineHelpText>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Position_Description__c</fullName>
        <description>Event Registration field</description>
        <inlineHelpText>Please enter your current position and a brief description of your role.</inlineHelpText>
        <label>Present Position/Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Title__c</fullName>
        <description>Event Registration Field</description>
        <label>Presentation Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <description>Event Registration field</description>
        <label>Presentation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Podium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podium or Poster</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RE_Affiliation__c</fullName>
        <inlineHelpText>Real Estate Affiliation</inlineHelpText>
        <label>RE Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Membership__c</fullName>
        <inlineHelpText>Describes Contact&apos;s relationship with VBS Real Estate Center</inlineHelpText>
        <label>RE Special Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Alumni Group</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Gift_Date__c</fullName>
        <description>Date of most recent gift</description>
        <label>Recent Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recipient_of_Grant_Research_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>Recipient of Grant/Research Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_Information_Full_Time__c</fullName>
        <description>Field utilized for VSB Real Estate Center Recruitement/Registration Information.</description>
        <label>Recruitment Information (Full Time)</label>
        <picklist>
            <picklistValues>
                <fullName>-- Please Select one --</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>My company is not recruiting at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My company is currently recruiting for full-time postions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My company is not recruiting at this time, but would like to learn more.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruitment_Information_Internships__c</fullName>
        <description>Field utilized for VSB Real Estate Center Recruitement/Registration Information.</description>
        <label>Recruitment Information (Internships)</label>
        <picklist>
            <picklistValues>
                <fullName>-- Please Select One --</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>My company is not seeking interns at this time, but would like to learn more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My company is not seeking interns at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My company is seeking real estate interns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <picklist>
            <picklistValues>
                <fullName>AD-Seventh Day Adventist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT-Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU-Buddhist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EO-Eastern Orthodox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP-Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI-Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS-Islamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JE-Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU-Lutheran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO-Latter Day Saints (MO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT-Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND-Non-Denominational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO-Unknown, Not Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP-Other Protestant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR-Presbyterian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QU-Quaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-Roman Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC-Congregational (UCC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Cleanup_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review/Cleanup (EMBA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN_State_ID__c</fullName>
        <inlineHelpText>Use this field for a Contact&apos;s Social Security Number in 123-45-6789 format, or for other Permanent State Identifiers.</inlineHelpText>
        <label>SSN/State ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYBUNT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact made a donation some year but not this year</inlineHelpText>
        <label>SYBUNT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Letter Salutation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelfAttend2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field for parity with leads</description>
        <label>Yes, I will attend:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SharePoint_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Access to Share Point has been taken care of.</description>
        <label>SharePoint Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Interest_Group_Leader__c</fullName>
        <description>Event Registration Field</description>
        <label>Special Interest Group Leader</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <inlineHelpText>Name of Contact&apos;s Spouse</inlineHelpText>
        <label>Spouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Withdrew_from_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if Student withdrew from EMBA program.</inlineHelpText>
        <label>Student Withdrew from EMBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to flag people that have with drawn from the program or need to be excluded from the overall selection process when it comes time for reports.</description>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Msg_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Contact does not wish to receive text messages.</inlineHelpText>
        <label>Text Msg. Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Gifts__c</fullName>
        <description>Total Number of Gifts</description>
        <label>Total Gifts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TwitterId__c</fullName>
        <label>TwitterId</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Under_Graduate_Institution__c</fullName>
        <label>Under Graduate Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSB_Advisory_Council__c</fullName>
        <label>VSB Advisory Council</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMPPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VUFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAC - Former</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VSB_Affiliation__c</fullName>
        <inlineHelpText>Temporary field for Madonna&apos;s data</inlineHelpText>
        <label>VSB Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VU_Rating__c</fullName>
        <description>Villanova Internal rating value</description>
        <label>VU Rating</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <label>Volunteer Type</label>
        <picklist>
            <picklistValues>
                <fullName>-Select One-</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WSJ_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wall Street Journal placed on order.</description>
        <label>WSJ Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Contact&apos;s Website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WildCard_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WildCard has been ordered for student.</description>
        <label>WildCard Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Will_You_Attend_the_Reception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field for parity with Leads</description>
        <label>Will You Attend the Reception (Y/N)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Will_you_attend_the_reception2__c</fullName>
        <description>Event registration field for parity with Leads</description>
        <label>Will you attend the reception?</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X_ACTIVITIES__c</fullName>
        <inlineHelpText>ACT! Data</inlineHelpText>
        <label>X_ACTIVITIES</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X_GROUP_MEMBERSHIP__c</fullName>
        <inlineHelpText>ACT! Data</inlineHelpText>
        <label>X_GROUP_MEMBERSHIP</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X_HISTORY__c</fullName>
        <description>ACT History.</description>
        <inlineHelpText>ACT! History</inlineHelpText>
        <label>X_HISTORY</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X_NOTE_HISTORY__c</fullName>
        <description>ACT Data</description>
        <inlineHelpText>ACT! Data</inlineHelpText>
        <label>X_NOTE_HISTORY</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field</description>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Young_Alum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Young Alum</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Business_Leaders_Forum_active_councils</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Business Leaders&apos; Forum-active councils</label>
    </listViews>
    <listViews>
        <fullName>Carol_Denz</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Carol Denz</label>
    </listViews>
    <listViews>
        <fullName>EMBA_Class_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>EMBA Class 1</label>
    </listViews>
    <listViews>
        <fullName>EMBA_Class_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>EMBA Class 2</label>
    </listViews>
    <listViews>
        <fullName>EMBA_Class_9</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EMBA_ID_Status__c</field>
            <operation>equals</operation>
            <value>Student EMBA 9</value>
        </filters>
        <label>EMBA Class 9</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Affiliate</fullName>
        <active>true</active>
        <description>A person of significance who&apos;s activities the University follows</description>
        <label>Affiliate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alum</fullName>
        <active>true</active>
        <description>A person who has received a degree from the University</description>
        <label>Alum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guardian</fullName>
        <active>true</active>
        <description>A person legally entrusted with the care of, and managing the property and rights of, another person, usually a minor.</description>
        <label>Guardian</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Any other type of person that does not fit into the other categories</description>
        <label>Other</label>
    </recordTypes>
</CustomObject>